examples/test/testpolicy14540.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14540
  namespace: namespace442
spec:
  podSelector:
    matchLabels:
      key34: value43
      key45: value37
      key26: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value41
          key38: value19
          key19: value2
      podSelector:
        matchLabels:
          key47: value28
          key42: value10
          key28: value11
